Bug fixes and CSS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
-	<link rel="manifest" href="../../site.webmanifest"> 
+	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+	<link rel="manifest" href="./site.webmanifest"> 
 
 	<title>Martins Gazatteer</title>
 	
@@ -76,7 +76,7 @@
 		<section class="information-section">
 
 			<img src="./images/close.svg" class="info-clear-icon" alt="clear icon">
-			<img src="./images/info2.svg" class="info-icon" 	  alt="info icon">
+			<!-- <img src="./images/info2.svg" class="info-icon" 	  alt="info icon"> -->
 			<div class="info-div-1">
 				<div class="flag-icon">
 					<img src="./images/flag_plain.svg" class="flag-icon" alt="flag icon">
@@ -113,7 +113,7 @@
 
 	<section class="weather-info-section">
 		<img src="./images/close.svg" 	  class="weather-clear-icon" alt="clear icon">
-		<img src="./images/cloudy2.svg" class="cloud-icon" 	  alt="cloud icon">
+		<!-- <img src="./images/cloudy2.svg" class="cloud-icon" 	  alt="cloud icon"> -->
 		<h3>Weather Information</h3>
 		
 		<div class="current-weather-div">
@@ -170,7 +170,7 @@
 
 	<section class="exchange-rate-section">
 		<img src="./images/close.svg" 	  class="exchange-clear-icon" alt="clear icon">
-		<img src="./images/exchange2.svg" class="exchange-icon" 	  alt="exchange icon">
+		<!-- <img src="./images/exchange2.svg" class="exchange-icon" 	  alt="exchange icon"> -->
 		<h3>Top 10 Traded</h3><h3>Currency Exchange Rates</h3>
 
 		<div class="exchangeInfo-div">
@@ -223,7 +223,7 @@
 	<section class="covid-section">
 		<!-- <div class="flag-icon"></div> -->
 		<img src="./images/close.svg" class="covid-clear-icon" alt="clear icon">
-		<img src="./images/covid-19.svg" class="covid-icon" id="covid19">
+		<!-- <img src="./images/covid-19.svg" class="covid-icon" id="covid19"> -->
 		<h3>Covid-19 Data Summary</h3>
 		<div class="covid-chart-div">
 			<div class="covid-total-header"></div>
