--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-	<link rel="manifest" href="./site.webmanifest"> 
 
 	<title>Martins Gazatteer</title>
 	
@@ -23,6 +22,7 @@
 	<link rel="stylesheet" href="./node_modules/leaflet.markercluster/dist/MarkerCluster.css">
 	<link rel="stylesheet" href="./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css">
 
+	<link rel="manifest" href="./manifest.json">
 </head>
 
 <body>
