--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 	<!-- bootstrapcdn -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<!-- fonts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap">
+	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<!-- mine -->
 	<link rel="stylesheet" href="./css/portrait.css">
 	<link rel="stylesheet" href="./css/landscape.css">
 	<!-- marker cluster -->
@@ -55,13 +58,13 @@
 			<li id="nav-weather-icon">
 				<img src="./images/cloudy2.svg" 	class="nav-link-icons"  >
 			</li>
-			<li>
+			<li id="nav-covid-icon">
 				<img src="./images/covid-19.svg" 	class="nav-link-icons" id="nav-covid-19-icon">
 			</li>
 			<li>
 				<img src="./images/exchange2.svg" 	class="nav-link-icons" id="nav-exrate-icon">
 			</li>
-			<li>
+			<li id="nav-news-icon">
 				<img src="./images/news.svg" 		class="nav-link-icons" id="nav-news-icon">
 			</li>
 		</ul>
@@ -236,8 +239,8 @@
 	
 	<section class="news-info-section">
 		<img src="./images/close.svg" class="news-clear-icon" alt="clear icon">
-		<img src="./images/news.svg" class="news-icon" alt="news icon">
-		<h3 id="news-info-header">Latest News Head Lines</h3>
+		<!-- <img src="./images/news.svg" class="news-icon" alt="news icon"> -->
+		<h3 id="news-info-header">Local Head Lines</h3>
 		<div id="news-div">
 			<!-- HTML inserted via jQuery in api.js file. -->
 		</div>
